resources/MigrationTargetVPC.yml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  MyClientIP:
    Description: 'The public IP address range that can be used to Access the Web Application and SSH to the EC2 instances. You can get your address using
      checkip.amazonaws.com.'
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Resources:
  VPCStack:
    Type: 'AWS::CloudFormation::Stack'
    Properties:
      TemplateURL: >-
        https://aws-quickstart.s3.amazonaws.com/quickstart-aws-vpc/templates/aws-vpc.template
      Parameters:
        AvailabilityZones: !Join 
          - ','
          - !GetAZs 
            Ref: 'AWS::Region'
  # Security Group with application layer rules
  sgweb:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Target Security Group Web
      VpcId: !GetAtt 
        - VPCStack
        - Outputs.VPCID
  # Rule allows your IP to acccess the application layer 
  WebIngress1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref sgweb
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: !Ref MyClientIP
  # Security Group with database layer rules 
  sgdatabase:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Target Security Group - source DB
      VpcId: !GetAtt 
        - VPCStack
        - Outputs.VPCID
  # Rule allows application layer access to database layer.
  sgdatabasesourceIngressWeb:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref sgdatabase
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      SourceSecurityGroupId: !Ref sgweb
